tests/integrations/basic-bin/tests/actual_tests/foomp.stderr
error[E0432]: unresolved import `basic_bin`
 --> tests/actual_tests/foomp.rs:3:5
  |
3 | use basic_bin::add;
  |     ^^^^^^^^^ use of undeclared crate or module `basic_bin`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0432`.
